[gd_scene load_steps=14 format=3 uid="uid://yi27cnl8ta2v"]

[ext_resource type="Script" path="res://START/script/bismillah_start.gd" id="1_c0vu0"]
[ext_resource type="Texture2D" uid="uid://dj7qerpt28rfq" path="res://START/asset start/bg start.png" id="2_dvp17"]
[ext_resource type="Texture2D" uid="uid://b8t0iwf1y620c" path="res://START/asset start/cloud.png" id="3_p7cao"]
[ext_resource type="Texture2D" uid="uid://db113u38q4dln" path="res://START/asset start/starttitle.png" id="4_jid0q"]
[ext_resource type="Texture2D" uid="uid://bp5i01iwksc5c" path="res://START/asset start/button mulai.png" id="5_uwx0q"]
[ext_resource type="Texture2D" uid="uid://dsmg0sdalvnj6" path="res://START/asset start/hrefm.png" id="6_0cs84"]
[ext_resource type="Texture2D" uid="uid://d0gy6xxepiqt0" path="res://START/asset start/button quiz.png" id="7_ygh2l"]
[ext_resource type="Texture2D" uid="uid://ce1rc37fhodto" path="res://START/asset start/hrefq.png" id="8_hm310"]

[sub_resource type="Animation" id="Animation_8yuxc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cloud:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cloud2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(516, 188)]
}

[sub_resource type="Animation" id="Animation_jd20c"]
resource_name = "cloud"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cloud:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9, 1.4, 1.8, 2.2, 2.5, 2.8, 3.2, 3.4, 3.6, 3.8, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 60), Vector2(50, 65), Vector2(100, 70), Vector2(150, 55), Vector2(200, 40), Vector2(250, 49.375), Vector2(300, 58.75), Vector2(350, 70), Vector2(400, 85), Vector2(450, 70), Vector2(500, 95), Vector2(550, 97.5), Vector2(600, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cloud2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 2.8, 3.2, 3.5, 3.8, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(400, 188), Vector2(350, 188), Vector2(300, 188), Vector2(250, 188), Vector2(200, 188), Vector2(100, 188), Vector2(50, 188), Vector2(0, 188), Vector2(-50, 188), Vector2(-100, 188), Vector2(-160, 188)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dxtgt"]
_data = {
"RESET": SubResource("Animation_8yuxc"),
"cloud": SubResource("Animation_jd20c")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lr3gs"]
size = Vector2(500, 145)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2nx6"]
size = Vector2(500, 145)

[node name="BISSMILLAHSTART" type="Node2D"]
script = ExtResource("1_c0vu0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dxtgt")
}
autoplay = "cloud"

[node name="bg start" type="Sprite2D" parent="."]
position = Vector2(272, 397)
scale = Vector2(1.36705, 1.36705)
texture = ExtResource("2_dvp17")

[node name="Cloud" type="Sprite2D" parent="."]
scale = Vector2(0.668, 0.668)
texture = ExtResource("3_p7cao")

[node name="Cloud2" type="Sprite2D" parent="."]
position = Vector2(516, 188)
scale = Vector2(0.671, 0.671)
texture = ExtResource("3_p7cao")

[node name="Starttitle" type="Sprite2D" parent="."]
position = Vector2(273, 490)
scale = Vector2(1.36514, 1.36514)
texture = ExtResource("4_jid0q")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TouchScreenmulai" type="TouchScreenButton" parent="Control"]
position = Vector2(127, 228)
scale = Vector2(0.558, 0.558)
texture_normal = ExtResource("5_uwx0q")
texture_pressed = ExtResource("6_0cs84")
shape = SubResource("RectangleShape2D_lr3gs")

[node name="Buttonmulai" type="Button" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 3.625
anchor_top = 8.225
anchor_right = 9.65
anchor_bottom = 9.775
offset_right = 8.0
offset_bottom = 8.0
metadata/_edit_use_anchors_ = true

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="TouchScreenquiz" type="TouchScreenButton" parent="Control2"]
position = Vector2(122, 333)
scale = Vector2(0.566, 0.566)
texture_normal = ExtResource("7_ygh2l")
texture_pressed = ExtResource("8_hm310")
shape = SubResource("RectangleShape2D_u2nx6")

[node name="Buttonquiz" type="Button" parent="Control2"]
visible = false
layout_mode = 0
offset_left = 142.0
offset_top = 436.0
offset_right = 388.0
offset_bottom = 506.0

[connection signal="released" from="Control/TouchScreenmulai" to="." method="_on_touch_screenmulai_released"]
[connection signal="pressed" from="Control/Buttonmulai" to="." method="_on_buttonmulai_pressed"]
[connection signal="released" from="Control2/TouchScreenquiz" to="." method="_on_touch_screenquiz_released"]
